feat:重构项目并添加用户控制器
- 重构配置文件，添加 server 相关配置
- 新增用户控制器，实现用户登录、登出、获取用户信息等功能
- 更新路由注册方式，使用控制器进行路由注册
- 优化项目结构，移除冗余代码

--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,7 +1,9 @@
 server:
   name: "gin-demo"
   mode: "debug"
+  host: localhost
   port: 8080
+  relative_path: "/api"
 
 mysql:
   host: "127.0.0.1"
@@ -9,6 +11,8 @@ mysql:
   user: "root"
   password: "123456"
   dbname: "go-gin"
+  max_idle_conns: 10
+  max_open_conns: 50
 
 redis:
   host: "127.0.0.1"
